# ck-core-rs

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.prebuilt  LICENSE  README.md  install.sh
.github/workflows/: release.yml
core-rs/: .gitignore
core-rs/examples/: query_ontology.rs
core-rs/src/: continuant_tracker.rs  errors.rs  lib.rs  process_tracker.rs
core-rs/src/cache/: mod.rs  package_manager.rs
core-rs/src/compliance/: mod.rs
core-rs/src/daemon/: edge_router.rs  mod.rs
core-rs/src/drivers/: filesystem.rs  git.rs  http.rs  mod.rs  traits.rs  version.rs
core-rs/src/edge/: kernel.rs  metadata.rs  mod.rs  request_builder.rs
core-rs/src/kernel/: api.rs  builder.rs  governor.rs  kernel.rs  manager.rs  mod.rs  pid.rs
core-rs/src/ontology/: bfo.rs  config_reader.rs  generator.rs  improvement.rs  library.rs  mod.rs  query.rs
core-rs/src/port/: manager.rs  mod.rs
core-rs/src/project/: config.rs  mod.rs  registry.rs
core-rs/src/rbac/: mod.rs  permission_checker.rs
core-rs/src/storage/: mod.rs  scanner.rs
core-rs/src/urn/: ckdl_parser.rs  mod.rs  resolver.rs  validator.rs
core-rs/src/workflow/: ckdl_parser.rs  mod.rs  validator.rs
core-rs/tests/: README.md
core-rs/tests/contracts/: README.md  contract_port_allocation_tests.rs  contract_tests.rs  kernel_manager_contracts.rs  port_allocation_contracts.rs  process_tracker_contracts.rs  protocol_purity_contracts.rs  status_tool_path_contracts.rs
core-rs/tests/integration/: edge_router_integration_test.rs  kernel_integration_tests.rs  kernel_lifecycle_tests.rs  multi_instance_workflow_tests.rs  portable_cli_tests.rs  project_lifecycle_tests.rs
