[package]
name = "ck-core-rs"
version = "1.3.17"
edition = "2021"
authors = ["Peter Sty <peter@styk.tv>"]
description = "Concept Kernel - a sovereign computational entity in a distributed graph."
license = "MIT"
repository = "https://github.com/conceptkernel/core-rs"

[lib]
name = "ckp_core"
path = "core-rs/src/lib.rs"

[[bin]]
name = "ckr"
path = "core-rs/src/bin/ckr.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# File watching
notify = "7.0"

# Signal handling (Ctrl+C)
ctrlc = "3.4"

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Regex
regex = "1.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Process management
sysinfo = "0.31"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system utilities
walkdir = "2.5"

# UUID
uuid = { version = "1.10", features = ["v4"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# Hex encoding
hex = "0.4"

# Singleton pattern
once_cell = "1.19"

# Unix signal handling and file locking
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

# Path diffing for relative symlinks
pathdiff = "0.2"

# Tar and compression for package management
tar = "0.4"
flate2 = "1.0"

# RDF/Ontology library (Phase 4 Stage 0)
oxigraph = "0.4"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
uuid = { version = "1.10", features = ["v4"] }
sysinfo = "0.31"

# Integration tests
[[test]]
name = "kernel_integration"
path = "core-rs/tests/integration/kernel_integration_tests.rs"

[[test]]
name = "kernel_lifecycle"
path = "core-rs/tests/integration/kernel_lifecycle_tests.rs"

[[test]]
name = "multi_instance_workflow"
path = "core-rs/tests/integration/multi_instance_workflow_tests.rs"

[[test]]
name = "portable_cli"
path = "core-rs/tests/integration/portable_cli_tests.rs"

[[test]]
name = "project_lifecycle"
path = "core-rs/tests/integration/project_lifecycle_tests.rs"

[[test]]
name = "edge_router_integration"
path = "core-rs/tests/integration/edge_router_integration_test.rs"

# Contract tests (protocol invariants)
[[test]]
name = "contract_port_allocation"
path = "core-rs/tests/contracts/contract_port_allocation_tests.rs"

[[test]]
name = "contract_tests"
path = "core-rs/tests/contracts/contract_tests.rs"

[[test]]
name = "contracts_port"
path = "core-rs/tests/contracts/port_allocation_contracts.rs"

[[test]]
name = "contracts_kernel_manager"
path = "core-rs/tests/contracts/kernel_manager_contracts.rs"

[[test]]
name = "contracts_process_tracker"
path = "core-rs/tests/contracts/process_tracker_contracts.rs"

[[test]]
name = "contracts_protocol_purity"
path = "core-rs/tests/contracts/protocol_purity_contracts.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
